<resources>
    <string name="AB_DontShowAgain">"OK, don't show again"</string>
    <string name="AM_AddToMySegments">"Bookmark segments you want to compete to add them to My Segment. "</string>
    <string name="AM_BluetoothAlwaysUsageDescription">Bryton Acitve would like to access BLE. Select to allow Bryton Active to search and connect with BLE accessories. To ensure Bryton Acitve can successfully connect, please make sure your BLE device is awaken and nearby.</string>
    <string name="AM_ChangeOrder">Long press to drag the waypoint to adjust the sequence.</string>
    <string name="AM_ChangeTraffic">You can change the transportation type when planning each part of the route</string>
    <string name="AM_ChangeTrafficInList">You can also change the transportation type of each part of the planned route in detail section.</string>
    <string name="AM_ChoosePlace">"Move the map to search for locations, then press '+' to add the selected location."</string>
    <string name="AM_ConnectDevShowSegmentsStatus">You can check the status of each segment in My segments when the device is connected via BLE</string>
    <string name="AM_DeleteWayPoint">Press「x」to remove the waypoint</string>
    <string name="AM_DismissPlanNewRoute">Your changes have not been saved. If you leave, all the changes will be lost.</string>
    <string name="AM_DisplayNotice">The training workout description may be slightly adjusted for display on the Bryton device.</string>
    <string name="AM_LoginError" formatted="false">Login failed %s times, please try again later in %s mins.</string>
    <string name="AM_LoginWaitingToast">Too many failed login attempts. Please try again in %s mins.</string>
    <string name="AM_NewChat">start new chat message</string>
    <string name="AM_PasswordRule">Your password must be at least 8 characters long and include a lowercase letter, an uppercase letter, and a number.</string>
    <string name="AM_ReachSegmentsLimit">Please unselect some segments to add new ones.</string>
    <string name="AM_Redo">Press 「Redo」button to reverse your undone action. You can redo only after you undo an action.</string>
    <string name="AM_RemoveBookmark">This segment will be removed from My Segment only. You will no longer be able to compete this segment on device lively.</string>
    <string name="AM_RemoveFromMySegments">Unmark the segments to remove the segments from My Segments and the device.</string>
    <string name="AM_SaveRoute">Press Save to save the route once finishing the planning</string>
    <string name="AM_SegmentIsUpToDate">This segment is downloaded and the data is up-to-date.</string>
    <string name="AM_SegmentNeedsUpdate">The segment data is out-of-date. Click to update the data of this segment.</string>
    <string name="AM_SegmentUnsend">Click to download this segment to compete on deivce.</string>
    <string name="AM_ShowAllSegments">You can see all your starred segments on STRAVA here after enabling STRAVA Sync authorization</string>
    <string name="AM_ShowMySegments">All bookmarked segments will be listed here.</string>
    <string name="AM_StravaAuthorize">Click STRAVA and follow the instructions to authorize STRAVA sychronization</string>
    <string name="AM_SyncAllSegments">Click to sync all segments in My Segments to the device.</string>
    <string name="AM_SyncProfileData">Bryton Active syncs your account profile to ensure the accuracy and consistency of your ridelogs when analyzing them.</string>
    <string name="AM_Undo">Press「Undo」button to cancel your last action, rolling back to the previous status</string>
    <string name="AM_UnsupportedWorkout">"This workout has more than 80 steps. It's not supported on Bryton devices."</string>
    <string name="AM_UploadActivityMsg">Uploading your activities from the device. This process continues when the app is running in the background.</string>
    <string name="AM_workoutHaveNoStep">This workout has no training details</string>
    <string name="AT_AddToMySegments">Mark segments to compete on devices</string>
    <string name="AT_ChangeOrder">Adjust the sequence of waypoints</string>
    <string name="AT_ChangeTraffic">Change transportation type</string>
    <string name="AT_ChoosePlace">Choose a location</string>
    <string name="AT_ConnectDevShowSegmentsStatus">Check Segment Status</string>
    <string name="AT_DeleteWayPoint">Remove the waypoint</string>
    <string name="AT_DismissPlanNewRoute">Discard the planning route?</string>
    <string name="AT_DisplayNotice">Display Notice</string>
    <string name="AT_NewChat">New Chat</string>
    <string name="AT_ReachSegmentsLimit">Reached the limit</string>
    <string name="AT_Redo">Redo</string>
    <string name="AT_RemoveBookmark">Unselect this segment?</string>
    <string name="AT_RemoveFromMySegments">Unmark the segments</string>
    <string name="AT_SaveRoute">Save the route</string>
    <string name="AT_ShowAllSegments">All segments</string>
    <string name="AT_ShowMySegments">My Segments</string>
    <string name="AT_StravaAuthorize">Strava Sync Authorization</string>
    <string name="AT_Undo">Undo</string>
    <string name="AT_UnsupportedWorkout">Unsupported Workout</string>
    <string name="AT_gpxPointsOverflow">This gpx file contains too many points.</string>
    <string name="A_B_Remove">Remove</string>
    <string name="AboutMe">About Me</string>
    <string name="AccountConfirmationDesc">"In order to complete the registeration process, please check your inbox and click on the link in the email we have just sent you. If it is not there, please check the spam folder and meanwile make sure you're checking the correct email account."</string>
    <string name="AccountEmail">Account Email</string>
    <string name="Activities">Activities</string>
    <string name="ActivitiesUploading">Activities Uploading</string>
    <string name="ActivityAutoSync">Activity Auto Sync</string>
    <string name="Activityresend">Something went wrong during the transfer. Please make sure the device is nearby, powered on and connected to your phone.</string>
    <string name="Activitysynctoapp">All activities have been successfully synced with the Active app and will be uploaded to the Bryton cloud. Please make sure you have a stable network connection.</string>
    <string name="Activitysynctocloud">All activities have been successfully synchronized to the Bryton cloud. You can now view your activities.</string>
    <string name="AddDevice">Add New Device</string>
    <string name="AddEditQuickReplies">Add/Edit Quick Replies</string>
    <string name="AddFromMyRoute">Add from My Route</string>
    <string name="AddNewQuickmsg">Tap to add a new quick reply</string>
    <string name="AddPhoto">Add Photo</string>
    <string name="AddPoiFavorite">Are you sure you want to add to Favorites?</string>
    <string name="AddRecipients">Add Recipients</string>
    <string name="AddSensor">Add Sensor</string>
    <string name="AddSensorID">Add Sensor by ID</string>
    <string name="AddStandMap">Add Bryton Standard Map</string>
    <string name="Africa">Africa</string>
    <string name="Agree">Agree</string>
    <string name="AheadOver">Ahead of Me</string>
    <string name="AlertEvery">AlertEvery</string>
    <string name="AlertSetting">Alert Setting</string>
    <string name="AlertSettings">Alerts</string>
    <string name="Alert_M_EmailExists">This email already exists. Please try a different email address to register, or login with your existing account.</string>
    <string name="Alert_M_FailedToSendRoute">The route is failed to be sent due to some reasons, please try again later.</string>
    <string name="Alert_M_MakeSureDeviceConnection">Please make sure the compatible device is connected and try again.</string>
    <string name="Alert_M_NameZone">Tailor the zone name to make it more relevant based on your fitness goals or training programs.</string>
    <string name="Alert_M_NewFirmware">Download the latest firmware to enhance your riding experience</string>
    <string name="Alert_M_NewRouteSaved">The route is created and available in My Route.</string>
    <string name="Alert_M_PasswordChanged">Your account password has been changed successfully.</string>
    <string name="Alert_M_RouteSent">The route has been sent to device successfully. You can find the route placed in My Route on your Rider device.</string>
    <string name="Alert_T_EmailExists">The email address has been registered.</string>
    <string name="Alert_T_FailedToSendRoute">Failed to Send Route</string>
    <string name="Alert_T_NameZone">Name the Zone</string>
    <string name="Alert_T_PasswordChanged">Password Changed</string>
    <string name="Alert_T_RouteSaved">Route Saved</string>
    <string name="Alert_T_RouteSent">Route Sent</string>
    <string name="AlreadyInTheGroup">"You've joined the group"</string>
    <string name="AltCalibration">Alt. Calibration</string>
    <string name="AltGain">Alt. Gain</string>
    <string name="AltLoss">Alt. Loss</string>
    <string name="Altitude">Altitude</string>
    <string name="AltitudeCalibration">Altitude calibration</string>
    <string name="AltitudeClimbChallenge">Altitude/Climb Challenge</string>
    <string name="AndroidFristMSG">Bryton Active transmits personal info (only name and image) and messages to our server for Group Ride and chat when the app is in use</string>
    <string name="AndroidFristMSG_2">Bryton Active transmits Message data to paired devices for Smart Notification when the app is in use .</string>
    <string name="Announcement">Announcement</string>
    <string name="ApplyPageSettingsContent">Do you want to save the data page configuration and sync it to the device?</string>
    <string name="ApplyPageSettingsTitle">Apply Page Settings?</string>
    <string name="April">Apr</string>
    <string name="Arrived">Arrived</string>
    <string name="Asia">Asia</string>
    <string name="At">At</string>
    <string name="August">Aug</string>
    <string name="AutoCalibration">Auto Calibration</string>
    <string name="AutoExtenstion">24hr Auto Extension</string>
    <string name="I_Vo2max">Vo2max</string>
    <string name="M_Vo2maxDesc1">"VO2 Max represents the maximum capacity of your body to absorb and utilize oxygen during intense exercise and is a key indicator of cardiorespiratory endurance.
A higher VO2 Max indicates that your body can transport and use more oxygen, allowing you to sustain better performance while cycling. VO2 Max helps you understand your cardiorespiratory fitness level and serves as an essential reference for tracking training effectiveness and fitness progress."</string>
    <string name="M_Vo2maxDesc2">"VO2 Max estimation via the Bryton device requires the following conditions:
 A power meter and heart rate sensor. If both power and heart rate sensors are not connected simultaneously, the App will be unable to calculate or update VO2 Max.
 VO2 Max is not measured on every ride; calculation is only triggered during training rides of stable and sufficient intensity.
 It is recommended to maintain a stable sensor signal to ensure proper device function and connection, and avoid riding in a pack to prevent reduced wind resistance.
 Environmental factors may affect VO2 Max estimation; training in high temperatures or at high altitudes may cause fluctuations in VO2 Max readings.
 VO2 Max estimation is based on your height, weight, age, gender, and MHR. Please ensure your profile data is correct to improve estimation accuracy."</string>
    <string name="MapsonDevice">Maps on Device</string>
    <string name="T_Vo2maxDesc2">Fitness Data Optimization</string>
    <string name="T_Vo2maxDesc3">"VO₂max Zone Definition Adapted from\"American College of Sports Medicine's Guidelines for Exercise Testing and Prescription\""</string>
    <string name="Used">Used</string>
</resources>