<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/base_layout" android:background="@color/l1_dark" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AddStandMap" android:layout_centerVertical="true" android:lineSpacingExtra="5.0sp" android:fontFamily="sans-serif" android:layout_marginStart="20.0dip" />
        <ImageView android:id="@id/add_icon" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/icon_add_photo" android:layout_centerVertical="true" android:layout_marginEnd="17.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:background="#ff333c4b" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="42.0dip">
        <TextView android:textSize="13.0sp" android:textStyle="bold|italic" android:textColor="#ffffffff" android:id="@id/title_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/MapsonDevice" android:layout_weight="1.0" android:lineSpacingExtra="3.0sp" android:fontFamily="sans-serif" android:layout_marginStart="20.0dip" />
        <TextView android:textSize="13.0sp" android:textColor="@color/light_grey_text" android:id="@id/used_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/Used" android:lineSpacingExtra="3.0sp" android:fontFamily="sans-serif" android:layout_marginEnd="20.0dip" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/map_list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>